in-line update functionality added

--- a/src/ListItems.css
+++ b/src/ListItems.css
@@ -19,3 +19,12 @@
     margin: 0 5px;
     font-size: 15px;
 }
+.list p input{
+    background-color: transparent;
+    border: 0;
+    color: #fff;
+    font-size: 18px;
+}
+.list p input:focus{
+    outline: none;
+}
